			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02o: *********************************

BUG: (06/09/05, DN) Network.getExports() returns no Exports for a Network (Bug #351)
FIX: Add loop for busses.

IMP: (06/07/05, SMR) Added controls to "Color preferences" to control the
     waveform window colors.

BUG: (06/06/05, SMR) PSpice output cannot handle "gnd" signal or "@" in names.
FIX: Use "0" for ground, convert "@" characters.

IMP: (06/07/05, DN) Refactoring: joined together ArcProto and PrimitiveArc
     classes.

BUG: (06/06/05, SMR) Selecting a variable in the "Attribute Properties" dialog
     may change it.
FIX: In Attributes.showSelectedAttribute(), set "loading" before changing the
     "value" field.

IMP: (06/05/05, DN) Persistent data of NodeInst is moved to ImmutableNodeInst
     class.

BUG: (06/05/05, DN) Sometimes EPoint has coordiante -0 (HotSpot optimezer).
FIX: Compare coordiante with "-0.0" instead of "0" in EPoint.

IMP: (06/05/05, DN) FlagSet class is no longer used and it is removed.

BUG: (06/05/05, DN) Grid alignement option "0" should disable alignemnt.
FIX: In EditWindow fix "gridAlign" methods.

IMP: (06/05/05, DN) JELIB output writes now "P" bit ("isParam")from database

IMP: (06/03/05, SMR) Added generic versions of the purple/red/orange libraries.

IMP: (06/01/05, SMR) First implementation of ALS simulator.

BUG: (05/30/05, SMR) Rigid arcs don't propagate hierarchically.
FIX: In Layout.java, use two change values on nodes: size-changed and
     position-changed.

BUG: (05/30/05, DN) TextDescriptor sometimes get wrong "isDisplay" bit in JELIB
     reader.
FIX: Make separate "parsedDescriptor" caches for onVar and non-onVar descriptors.

IMP: (05/27/05, SMR) The "Artwork Appearance" dialog now affects all selected
     artwork objects.

IMP: (05/27/05, SMR) PSpice output can now be read.
