@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.02o: *********************************
 
+IMP: (06/10/05, GVG) New values for DRC Rules 30.1, 30.2 and 30.4 in MoCMOS.
+Old values: 4,4,8. New Values: 5,5,10
+
 BUG: (06/09/05, DN) Network.getExports() returns no Exports for a Network (Bug #351)
 FIX: Add loop for busses.
 
